--- a/homepage-articles.css
+++ b/homepage-articles.css
@@ -563,7 +563,7 @@ padding: 0rem 1rem 0rem 2rem;
   align-items: center;
 }
 .text4 #textHeading2{
-  
+  text-align: center;
   font-family: Aboreto;
   font-size: 55px; 
   line-height: 84px; 
